<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center_vertical"
    android:padding="10dp"
    android:background="#301934"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:contentPadding="6dp"
        android:layout_margin="6dp"
        >
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        >
            <ImageButton
                android:id="@+id/returnbutton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/exit"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/return_desc"
                />


            <TextView
                android:id="@+id/Login"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:text="@string/loginPage"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textAllCaps="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="10dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_marginTop="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email_Login_Text"
                    android:inputType="textEmailAddress"
                    />
                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true"
                android:layout_marginTop="10dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Password_Text_Login"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_login"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:backgroundTint="#B399DD"
                android:textColor="#000000"
                android:textAllCaps="true"
                />
            <Button
                android:id="@+id/resetpass_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/editPass_text"
                android:textColor="#67032F"
                android:textStyle="bold"
                android:textSize="15sp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>